--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     text-align: center;
     color: rgb(255, 255, 255);
     background-color: bisque;
-    background-image: url(all.b.jpg);
+    background-image: url(images/all.b.jpg);
     
 }
 
